# TNCG15-Monte-Carlo-Pathtracer

./: CMakeLists.txt  README.md
TNCG15/: CMakeLists.txt  TNCG15.h  main.cpp
TNCG15/src/: Camera.cpp  Camera.h  Photon.h  Polygon.h  Ray.cpp  Ray.h  Rectangle.h  Sphere.h  TNCG15.cpp  Tetrahedron.h  Triangle.cpp  Triangle.h  kdtree.hpp  kdtree_homemade.h  main.cpp
